# bag_of_tricks

./: CODE_OF_CONDUCT.md  Cargo.toml  Procfile  README.md  RustConfig  app.json
bag_of_tricks/: Cargo.toml
bag_of_tricks/src/: alignment.rs  character.rs  citation.rs  deities.rs  dice_roller.rs  lib.rs  main.rs
bag_of_tricks/src/character/: ability.rs  attack.rs  background.rs  characteristics.rs  equipment.rs  features.rs  race.rs
bag_of_tricks/src/character/background/: acolyte.rs  charlatan.rs  city_watch.rs  clan_crafter.rs  cloistered_scholar.rs  courtier.rs  criminal.rs  entertainer.rs  faction_agent.rs  far_traveler.rs  folk_hero.rs  guild_artisan.rs  hermit.rs  inheritor.rs  knight_of_the_order.rs  mercenary_veteran.rs  noble.rs  outlander.rs  sage.rs  sailor.rs  soldier.rs  urban_bounty_hunter.rs  urchin.rs
bag_of_tricks/src/character/equipment/: adventuring_gear.rs  armor.rs  currency.rs  tools.rs  trinkets.rs  vehicles.rs
bag_of_tricks/src/character/names/: goblinoid.rs  halfling.rs  human.rs  kenku.rs  lizardfolk.rs  triton.rs
bag_of_tricks/src/character/race/: aasimar.rs  bugbear.rs  dragonborn.rs  dwarf.rs  elf.rs  firbolg.rs  gnome.rs  goblin.rs  goliath.rs  half_elf.rs  half_orc.rs  halfling.rs  hobgoblin.rs  human.rs  kenku.rs  kobold.rs  lizardfolk.rs  orc.rs  tabaxi.rs  tiefling.rs  triton.rs  yuan_ti.rs
bag_of_tricks/src/character/snapshots/: bag_of_tricks__character__ability__tests__ability_scores_snapshot_display.snap  bag_of_tricks__character__characteristics__tests__characteristics.snap  bag_of_tricks__character__characteristics__tests__characteristics_display.snap  bag_of_tricks__character__features__tests__display.snap
bag_of_tricks/src/deities/: dragonlance.rs  dwarven.rs  elven.rs  giant.rs  greyhawk.rs  halfling.rs  kobold.rs
bag_of_tricks/src/deities/snapshots/: bag_of_tricks__deities__dragon__tests__deities.snap  bag_of_tricks__deities__dwarven__tests__duergar_deities.snap  bag_of_tricks__deities__eberron__tests__deities.snap  bag_of_tricks__deities__elven__tests__drow_deities.snap  bag_of_tricks__deities__forgotten_realms__tests__deities.snap  bag_of_tricks__deities__giant__tests__deities.snap  bag_of_tricks__deities__gnomish__tests__deities.snap  bag_of_tricks__deities__goblinoid__tests__goblin_deities.snap  bag_of_tricks__deities__greyhawk__tests__deities.snap  bag_of_tricks__deities__halfling__tests__deities.snap  bag_of_tricks__deities__historical__tests__greek_deities.snap  bag_of_tricks__deities__orc__tests__deities.snap
bag_of_tricks/src/snapshots/: bag_of_tricks__character__tests__character.snap
bag_of_tricks/templates/: error.html
character/: Cargo.toml
character/src/: attack.rs  background.rs  languages.rs  lib.rs  proficiencies.rs  race.rs
character/src/background/: charlatan.rs  cloistered_scholar.rs  courtier.rs  entertainer.rs  inheritor.rs  mercenary_veteran.rs  noble.rs  outlander.rs  sailor.rs  urchin.rs  waterdhavian_noble.rs
character/src/background/snapshots/: character__background__city_watch__tests__snapshot_citations.snap  character__background__city_watch__tests__snapshot_features.snap  character__background__city_watch__tests__snapshot_languages.snap  character__background__city_watch__tests__weight.snap  character__background__clan_crafter__tests__snapshot.snap  character__background__clan_crafter__tests__snapshot_addl_equipment.snap  character__background__clan_crafter__tests__snapshot_addl_proficiences.snap  character__background__clan_crafter__tests__snapshot_coins.snap  character__background__clan_crafter__tests__snapshot_features.snap  character__background__clan_crafter__tests__snapshot_languages.snap  character__background__clan_crafter__tests__snapshot_proficiences.snap  character__background__cloistered_scholar__tests__snapshot_display.snap  (+53 more)
character/src/equipment/: weapons.rs
character/src/race/: aasimar.rs  bugbear.rs  dragonborn.rs  dwarf.rs  elf.rs  firbolg.rs  gnome.rs  goblin.rs  goliath.rs  half_elf.rs  half_orc.rs  halfling.rs  hobgoblin.rs  human.rs  kenku.rs  kobold.rs  lizardfolk.rs  orc.rs  origins.rs  tabaxi.rs  tiefling.rs  triton.rs  yuan_ti.rs
character/src/snapshots/: character__ability__tests__ability_scores_increase.snap  character__ability__tests__ability_scores_snapshot_display.snap  character__features__tests__display.snap  character__tests__character.snap  character__tests__character_display.snap
citation/: Cargo.toml
citation/src/: lib.rs
crates/alignment/: Cargo.toml
crates/alignment/src/: lib.rs
crates/background/: Cargo.toml
crates/background/src/: acolyte.rs  charlatan.rs  city_watch.rs  clan_crafter.rs  cloistered_scholar.rs  courtier.rs  criminal.rs  entertainer.rs  faction_agent.rs  far_traveler.rs  folk_hero.rs  guild_artisan.rs  haunted_one.rs  hermit.rs  inheritor.rs  knight_of_the_order.rs  lib.rs  mercenary_veteran.rs  noble.rs  outlander.rs  sage.rs  sailor.rs  soldier.rs  urban_bounty_hunter.rs  urchin.rs  uthgardt_tribe_member.rs  waterdhavian_noble.rs
crates/character/: Cargo.toml
crates/character/src/: ability.rs  background.rs  backstory.rs  equipment.rs  languages.rs  lib.rs  proficiencies.rs  race.rs
crates/class/: Cargo.toml
crates/class/src/: barbarian.rs  bard.rs  cleric.rs  druid.rs  fighter.rs  lib.rs  monk.rs  paladin.rs  ranger.rs  rogue.rs  sorcerer.rs  warlock.rs  wizard.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/gear/: Cargo.toml
crates/gear/src/: adventuring_gear.rs  armor.rs  currency.rs  lib.rs  tools.rs  vehicles.rs  weapons.rs
crates/languages/: Cargo.toml
crates/languages/src/: lib.rs
crates/personality/: Cargo.toml
crates/personality/src/: lib.rs
crates/race/: Cargo.toml
crates/race/src/: aasimar.rs  bugbear.rs  dragonborn.rs  dwarf.rs  elf.rs  firbolg.rs  gith.rs  gnome.rs  goblin.rs  goliath.rs  half_elf.rs  half_orc.rs  halfling.rs  hobgoblin.rs  human.rs  kenku.rs  kobold.rs  lib.rs  lizardfolk.rs  orc.rs  tabaxi.rs  tiefling.rs  triton.rs  yuan_ti.rs
crates/stats/: Cargo.toml
crates/stats/src/: ability.rs  equipment.rs  lib.rs  proficiencies.rs
(+1682 files in other folders)
