[package]
name = "bag_of_tricks"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
env_logger = "0.8"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
strum = "0.20"
strum_macros = "0.20"
tera = "1"
typetag = "0.1"

[dev-dependencies]
insta = "1"
serde_yaml = "0.8"
