[package]
name = "bag_of_tricks"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes"] }
character = { path = "./crates/character" }
rand = "0.8"
rand_pcg = "0.3"
sentry = "0.24"
tera = "1"
tide = "0.16"
tide-compress = "0.9"
tide-tera = "0.2"

[workspace]
members = ["crates/*"]
