[package]
name = "bag_of_tricks"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
alignment = { path = "../alignment" }
deities = { path = "../deities" }
dice_roller = { path = "../dice_roller" }
env_logger = "0.8"
itertools = "0.10"
rand = "0.8"
rand_pcg = "0.3"
sentry = "0.22.0"
sentry-actix = "0.22.0"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.20", features = ["derive"] }
tera = "1"
typetag = "0.1"

[dev-dependencies]
insta = "1"
serde_yaml = "0.8"
