[package]
name = "bag_of_tricks"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
character = { path = "../character" }
env_logger = "0.8"
rand = "0.8"
rand_pcg = "0.3"
sentry = "0.22.0"
sentry-actix = "0.22.0"
tera = "1"
