[package]
name = "character"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alignment = { path = "../alignment" }
attack = { path = "../attack" }
background = { path = "../background" }
backstory = { path = "../backstory" }
characteristics = { path = "../characteristics" }
deities = { path = "../deities" }
features = { path = "../features" }
gear = { path = "../gear" }
languages = { path = "../languages" }
personality = { path = "../personality" }
race = { path = "../race" }
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
stats = { path = "../stats" }
strum = { version = "0.20", features = ["derive"] }
trinkets = { path = "../trinkets" }

[dev-dependencies]
insta = { version = "1", features = ["backtrace"] }
serde_yaml = "0.8"
