[package]
name = "class"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backstory = { path = "../backstory" }
citation = { path = "../citation" }
deities = { path = "../deities" }
features = { path = "../features" }
gear = { path = "../gear" }
impl-enum = "0.2"
itertools = "0.10"
languages = { path = "../languages" }
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
stats = { path = "../stats" }
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
insta = "1"
serde_yaml = "0.8"
