[package]
name = "gear"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dice_roller = { path = "../dice_roller" }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.22", features = ["derive"] }
