[package]
name = "race"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alignment = { path = "../alignment" }
attack = { path = "../attack" }
backstory = { path = "../backstory" }
characteristics = { path = "../characteristics" }
citation = { path = "../citation" }
deities = { path = "../deities" }
dice_roller = { path = "../dice_roller" }
features = { path = "../features" }
gear = { path = "../gear" }
impl-enum = "0.2"
languages = { path = "../languages" }
personality = { path = "../personality" }
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
stats = { path = "../stats" }
strum = { version = "0.24", features = ["derive"] }
trinkets = { path = "../trinkets" }

[dev-dependencies]
insta = "1"
serde_yaml = "0.9"
