[package]
name = "stats"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
characteristics = { path = "../characteristics" }
dice_roller = { path = "../dice_roller" }
gear = { path = "../gear" }
itertools = "0.10"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.22", features = ["derive"] }
trinkets = { path = "../trinkets" }

[dev-dependencies]
insta = "1"
serde_yaml = "0.8"
